--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Sushi-ya</title>
   </head>
   <body>
+    <!-- Header section -->
     <header>
       <nav class="header__nav">
         <!-- Header logo -->
@@ -44,6 +45,48 @@
         </ul>
       </nav>
     </header>
+
+    <!-- Hero section -->
+    <section class="hero">
+      <div class="hero-image">
+        <img src="assets/sushi-1.png" alt="sushi" />
+        <!-- This Header says 'Sushi-ya' which means 'Sushi shop' in japanese -->
+        <h2>
+          寿 <br />
+          司 <br />
+          屋
+        </h2>
+
+        <div class="hero-image__overlay"></div>
+      </div>
+
+      <div class="hero-content">
+        <div class="hero-content-info">
+          <h1>Feel the taste of japanese food</h1>
+          <p>Feel the taste of the most popular japanese food from anywhere and anytime.</p>
+
+          <div class="hero-content__buttons">
+            <button class="hero-content__order-button">Order now</button>
+            <button class="hero-content__play-button">
+              <img src="assets/play-circle.svg" alt="play" />
+              How to order
+            </button>
+          </div>
+        </div>
+
+        <div class="hero-content__testimonial">
+          <div class="hero-content__customer flex-center">
+            <h4>24<span>k+</span></h4>
+            <p>Happy customers</p>
+          </div>
+
+          <div class="hero-content__review">
+            <img src="assets/user.png" alt="user" />
+            <p>"This is the best japanese food delivery service that ever existed."</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="js/script.js" type="module"></script>
   </body>
