--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Hero section -->
     <section class="hero">
       <div class="hero-image">
-        <img src="assets/sushi-1.png" alt="sushi" />
+        <img src="assets/sushi-1.png" alt="sushi-1" />
         <!-- This Header says 'Sushi-ya' which means 'Sushi shop' in japanese -->
         <h2>
           寿 <br />
@@ -88,11 +88,11 @@
       </div>
     </section>
 
-    <!-- About US section -->
+    <!-- About Us section -->
     <section class="about-us" id="about-us">
       <div class="about-us__image">
         <div class="about-us__image-sushi3">
-          <img src="assets/sushi-3.png" alt="sushi" />
+          <img src="assets/sushi-3.png" alt="sushi-3" />
         </div>
 
         <button class="about-us__button">
@@ -101,7 +101,7 @@
         </button>
 
         <div class="about-us__image-sushi2">
-          <img src="assets/sushi-2.png" alt="sushi" />
+          <img src="assets/sushi-2.png" alt="sushi-2" />
         </div>
       </div>
 
@@ -113,6 +113,92 @@
           shopping and dining for our customers.
         </p>
       </div>
+    </section>
+
+    <!-- Popular Foods section -->
+    <section class="popular-foods" id="menu">
+      <h2 class="popular-foods__title">Popular Food / 人気の食べ物</h2>
+
+      <div class="popular-foods__filters sushi__hide-scrollbar">
+        <button class="popular-foods__filter-btn active">All</button>
+
+        <button class="popular-foods__filter-btn">
+          <img src="assets/sushi-9.png" alt="sushi-9" />
+          Sushi
+        </button>
+
+        <button class="popular-foods__filter-btn">
+          <img src="assets/sushi-8.png" alt="sushi-8" />
+          Ramen
+        </button>
+
+        <button class="popular-foods__filter-btn">
+          <img src="assets/sushi-7.png" alt="sushi-7" />
+          Udon
+        </button>
+
+        <button class="popular-foods__filter-btn">
+          <img src="assets/sushi-6.png" alt="sushi-6" />
+          Danggo
+        </button>
+
+        <button class="popular-foods__filter-btn">Others</button>
+      </div>
+
+      <div class="popular-foods__catalogue">
+        <article class="popular-foods__card">
+          <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12" />
+
+          <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+
+          <div class="popular-foods__card-details flex-between">
+            <div class="popular-foods__card-rating">
+              <img src="assets/star.svg" alt="star" />
+
+              <p>4.9</p>
+            </div>
+
+            <p class="popular-foods__card-price">₹645.00</p>
+          </div>
+        </article>
+
+        <article class="popular-foods__card active-card">
+          <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-11" />
+
+          <h4 class="popular-foods__card-title">Original Sushi</h4>
+
+          <div class="popular-foods__card-details flex-between">
+            <div class="popular-foods__card-rating">
+              <img src="assets/star.svg" alt="star" />
+
+              <p>5.0</p>
+            </div>
+
+            <p class="popular-foods__card-price">₹563.00</p>
+          </div>
+        </article>
+
+        <article class="popular-foods__card">
+          <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-10" />
+
+          <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+
+          <div class="popular-foods__card-details flex-between">
+            <div class="popular-foods__card-rating">
+              <img src="assets/star.svg" alt="star" />
+
+              <p>4.7</p>
+            </div>
+
+            <p class="popular-foods__card-price">₹205.00</p>
+          </div>
+        </article>
+      </div>
+
+      <button class="popular-foods__button">
+        Explore Food
+        <img src="assets/arrow-right.svg" alt="arrow-right" />
+      </button>
     </section>
 
     <script src="js/script.js" type="module"></script>
