animations for header and navbar, hero, about-us, and popular section

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <nav class="header__nav">
         <!-- Header logo -->
         <div class="header__logo">
-          <h4>Sushi-ya</h4>
+          <h4 data-aos="fade-up">Sushi-ya</h4>
           <div class="header__logo-overlay"></div>
         </div>
 
         <!-- Header menu for desktop view -->
-        <ul class="header__menu">
+        <ul class="header__menu" data-aos="fade-down">
           <li>
             <a href="#menu">Menu</a>
           </li>
@@ -38,7 +38,7 @@
         </ul>
 
         <!-- Header menu for mobile view -->
-        <ul class="header__menu-mobile">
+        <ul class="header__menu-mobile" data-aos="fade-down">
           <li>
             <img src="assets/menu.svg" alt="menu" />
           </li>
@@ -49,9 +49,9 @@
     <!-- Hero section -->
     <section class="hero">
       <div class="hero-image">
-        <img src="assets/sushi-1.png" alt="sushi-1" />
+        <img src="assets/sushi-1.png" alt="sushi-1" data-aos="fade-up" />
         <!-- This Header says 'Sushi-ya' which means 'Sushi shop' in japanese -->
-        <h2>
+        <h2 data-aos="fade-up">
           寿 <br />
           司 <br />
           屋
@@ -60,8 +60,9 @@
         <div class="hero-image__overlay"></div>
       </div>
 
+      <!-- Hero content with slogan -->
       <div class="hero-content">
-        <div class="hero-content-info">
+        <div class="hero-content-info" data-aos="fade-left">
           <h1>Feel the taste of japanese food</h1>
           <p>Feel the taste of the most popular japanese food from anywhere and anytime.</p>
 
@@ -74,7 +75,8 @@
           </div>
         </div>
 
-        <div class="hero-content__testimonial">
+        <!-- Customers testimonials -->
+        <div class="hero-content__testimonial" data-aos="fade-up">
           <div class="hero-content__customer flex-center">
             <h4>24<span>k+</span></h4>
             <p>Happy customers</p>
@@ -90,22 +92,24 @@
 
     <!-- About Us section -->
     <section class="about-us" id="about-us">
+      <!-- About Us Image -->
       <div class="about-us__image">
         <div class="about-us__image-sushi3">
-          <img src="assets/sushi-3.png" alt="sushi-3" />
+          <img src="assets/sushi-3.png" alt="sushi-3" data-aos="fade-right" />
         </div>
 
-        <button class="about-us__button">
+        <button class="about-us__button" data-aos="fade-up">
           Learn More
           <img src="assets/arrow-up-right.svg" alt="learn-more" />
         </button>
 
         <div class="about-us__image-sushi2">
-          <img src="assets/sushi-2.png" alt="sushi-2" />
+          <img src="assets/sushi-2.png" alt="sushi-2" data-aos="fade-right" />
         </div>
       </div>
 
-      <div class="about-us__content">
+      <!-- About Us Content -->
+      <div class="about-us__content" data-aos="fade-left">
         <p class="sushi__subtitle">About Us / 私たちに関しては</p>
         <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you.</h3>
         <p class="sushi__description">
@@ -117,36 +121,38 @@
 
     <!-- Popular Foods section -->
     <section class="popular-foods" id="menu">
-      <h2 class="popular-foods__title">Popular Food / 人気の食べ物</h2>
+      <h2 class="popular-foods__title" data-aos="fade-right">Popular Food / 人気の食べ物</h2>
 
+      <!-- Popular food types -->
       <div class="popular-foods__filters sushi__hide-scrollbar">
-        <button class="popular-foods__filter-btn active">All</button>
+        <button class="popular-foods__filter-btn active" data-aos="fade-right">All</button>
 
-        <button class="popular-foods__filter-btn">
+        <button class="popular-foods__filter-btn" data-aos="fade-right">
           <img src="assets/sushi-9.png" alt="sushi-9" />
           Sushi
         </button>
 
-        <button class="popular-foods__filter-btn">
+        <button class="popular-foods__filter-btn" data-aos="fade-right">
           <img src="assets/sushi-8.png" alt="sushi-8" />
           Ramen
         </button>
 
-        <button class="popular-foods__filter-btn">
+        <button class="popular-foods__filter-btn" data-aos="fade-left">
           <img src="assets/sushi-7.png" alt="sushi-7" />
           Udon
         </button>
 
-        <button class="popular-foods__filter-btn">
+        <button class="popular-foods__filter-btn" data-aos="fade-left">
           <img src="assets/sushi-6.png" alt="sushi-6" />
           Danggo
         </button>
 
-        <button class="popular-foods__filter-btn">Others</button>
+        <button class="popular-foods__filter-btn" data-aos="fade-left">Others</button>
       </div>
 
+      <!-- Popular food cards -->
       <div class="popular-foods__catalogue">
-        <article class="popular-foods__card">
+        <article class="popular-foods__card" data-aos="fade-right">
           <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12" />
 
           <h4 class="popular-foods__card-title">Chezu Sushi</h4>
@@ -162,7 +168,7 @@
           </div>
         </article>
 
-        <article class="popular-foods__card active-card">
+        <article class="popular-foods__card active-card" data-aos="fade-up">
           <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-11" />
 
           <h4 class="popular-foods__card-title">Original Sushi</h4>
@@ -178,7 +184,7 @@
           </div>
         </article>
 
-        <article class="popular-foods__card">
+        <article class="popular-foods__card" data-aos="fade-left">
           <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-10" />
 
           <h4 class="popular-foods__card-title">Ramen Legendo</h4>
@@ -195,7 +201,7 @@
         </article>
       </div>
 
-      <button class="popular-foods__button">
+      <button class="popular-foods__button" data-aos="fade-up">
         Explore Food
         <img src="assets/arrow-right.svg" alt="arrow-right" />
       </button>
