--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <!-- Popular Foods section -->
     <section class="popular-foods" id="menu">
-      <h2 class="popular-foods__title" data-aos="fade-right">Popular Food / 人気の食べ物</h2>
+      <h2 class="popular-foods__title" data-aos="flip-down">Popular Food / 人気の食べ物</h2>
 
       <!-- Popular food types -->
       <div class="popular-foods__filters sushi__hide-scrollbar">
@@ -338,6 +338,46 @@
         </div>
       </section>
     </section>
+
+    <!-- Subscription section -->
+    <section class="subscription flex-center" id="services">
+      <h2 data-aos="flip-down">
+        Get offers stright <br />
+        to your inbox
+      </h2>
+      <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
+
+      <div class="subscription__form" data-aos="fade-up">
+        <input type="text" placeholder="Enter your email address" />
+        <button>Get Started</button>
+      </div>
+    </section>
+
+    <!-- Footer section -->
+    <footer class="footer flex-between">
+      <h3 class="footer__logo">
+        <span>Sushi</span>-ya
+      </h3>
+
+      <ul class="footer__nav">
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#food">Food</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about-us">About Us</a></li>
+      </ul>
+
+      <ul class="footer__social">
+        <li class="flex-center">
+          <img src="assets/facebook.svg" alt="facebook" />
+        </li>
+        <li class="flex-center">
+          <img src="assets/instagram.svg" alt="instagram" />
+        </li>
+        <li class="flex-center">
+          <img src="assets/twitter.svg" alt="twitter" />
+        </li>
+      </ul>
+    </footer>
 
     <script src="js/script.js" type="module"></script>
   </body>
