--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
     <!-- Subscription section -->
     <section class="subscription flex-center" id="services">
       <h2 data-aos="flip-down">
-        Get offers stright <br />
+        Get offers straight <br />
         to your inbox
       </h2>
-      <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
+      <p data-aos="fade-up">Sign up for the Sushi-ya newsletter</p>
 
       <div class="subscription__form" data-aos="fade-up">
         <input type="text" placeholder="Enter your email address" />
